--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,28 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  /* spacing */
+  --xx-small: 4px;
+  --x-small: 6px;
+  --small: 8px;
+  --medium: 12px;
+  --big: 16px;
+  --x-big: 20px;
+  --xxbig: 24px;
+  /* background */
+  --app-default: #ffffff;
+  --bg-primary: #6D28D9;
+  --bg-secondary: #F3F4F6;
+  /* colors */
+  --text-default: #374151;
+  --text-invert: #fff;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.dark {
+  /* background */
+  --app-default: #0a0a0a;
+  --bg-primary: #7C3AED;
+  --bg-secondary: #2E2640;
+  /* colors */
+  --text-default: #fff;
+  --text-invert: #fff;
 }
